fixed carousel button alignment

--- a/src/client/scss/vmware/components/carousel-standard.scss
+++ b/src/client/scss/vmware/components/carousel-standard.scss
@@ -170,7 +170,7 @@ $carousel-indicator-padding: 40px;
             }
 
             .cb-cta-link {
-                justify-content: center;
+                justify-content: flex-start;
 
                 .lnk,
                 .link-bttn {
